--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -45,6 +45,10 @@ nav .container {
     margin-left: 15% !important;
 }
 
+.navBrandLink {
+    display: inline !important;
+}
+
 .navBarText {
     font-size: 2px !important;
 }
@@ -53,8 +57,9 @@ nav .container {
     font-size: 18px !important;
 }
 
+
 .navText {
-    font-size: 15px !important;
+    font-size: 17px !important;
     margin-top: 0px !important;
 }
 
@@ -74,14 +79,14 @@ nav .container {
     color: white !important;
 }
 
-@media (max-width: 1400px) and (min-width: 1350px) {
+@media (max-width: 1500px) and (min-width: 1350px) {
     .navBrandText {
         font-size: 16px !important;
     }
 
     .navText {
         font-size: 14px !important;
-        margin-top: 1px !important;
+        margin-top: 2px !important;
     }
 
     .iconSize {
@@ -99,7 +104,7 @@ nav .container {
     }
 
     .navText {
-        margin-top: 5px !important;
+        margin-top: 2px !important;
         font-size: 14px !important;
     }
 
@@ -119,7 +124,7 @@ nav .container {
 
     .navText {
         font-size: 12px !important;
-        margin-top: 6px !important;
+        margin-top: 4px !important;
     }
 
     .iconSize {
@@ -142,7 +147,7 @@ nav .container {
 
     .navText {
         font-size: 10px !important;
-        margin-top: 8px !important;
+        margin-top: 6px !important;
     }
 
     .iconSize {
@@ -194,6 +199,12 @@ nav .container {
         margin-left: 8% !important;
     }
   }
+
+@media (max-width: 500px) {
+    .navBarItems {
+        margin-left: 2% !important;
+    }
+}
 
 @media (max-width: 1350px) and (min-width: 992px) {
     .logoImage {
